<resources>
    <string name="app_name">QuizApp</string>
    <string name="enter_your_name">Enter Your Name:</string>
    <string name="welcome">Welcome</string>
    <string name="quiz_app">Quiz App</string>
    <string name="start">Start</string>
    <string name="quiz_imageview">Quiz ImageView</string>
    <string name="check">CHECK</string>
    <string name="_111111">111111</string>
    <string name="score">Score:</string>
    <string name="try_again">Try Again</string>
</resources>