<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/pxfuel"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/quizId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/quiz_app"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="InvalidId" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_below="@+id/quizId"
        android:layout_marginTop="220dp"
        app:strokeColor="@color/black"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="@color/Rosewater">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:background="#E8B4B8">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/name_text"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:hint="@string/enter_your_name"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:inputType="textCapWords"
                    tools:ignore="VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/main_start_btn"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/start"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:backgroundTint="@color/Coral"
                tools:ignore="InvalidId"
                />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>