<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionsActivity"
    android:background="@color/DustyRose">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-33dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/QuestionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/_111111"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/QuestionImage"
            android:layout_width="wrap_content"
            android:layout_height="270dp"
            android:contentDescription="@string/quiz_imageview"
            tools:src="@drawable/speaking" />

        <LinearLayout
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/ProgressBarId"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/borderprogressbar"
                android:indeterminate="false"
                android:max="5"
                android:minHeight="50dp"
                android:progress="0" />

            <TextView
                android:id="@+id/ProgressBarTextId"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/borderprogressbar"
                android:gravity="center"
                android:padding="12dp"
                tools:text="0/4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/option_one_tv"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_margin="12dp"
                android:background="@drawable/borderoptions"
                android:text="@string/_111111"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingTop="5dp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/option_two_tv"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_margin="12dp"
                android:background="@drawable/borderoptions"
                android:text="@string/_111111"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingTop="5dp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/option_three_tv"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_margin="12dp"
                android:background="@drawable/borderoptions"
                android:text="@string/_111111"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingTop="5dp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/option_four_tv"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_margin="12dp"
                android:background="@drawable/borderoptions"
                android:text="@string/_111111"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingTop="5dp"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/check_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/check"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:backgroundTint="@color/RoseBlack"
                tools:ignore="SmallSp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>